--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
         <title>Should I run today?</title>
     </head>
     <body>
-        <div id="app"></div>
+        <div id="app">
+            <div>
+                Temp: --
+            </div>
+            <div>
+                Wind: --
+            </div>
+            <div>
+                humidity: --%
+            </div>
+            <div>
+                AQI: --
+            </div>
+        </div>
     </body>
     <script src="main.js"></script>
 </html>
